--- a/.github/workflows/deploy_to_render.yml
+++ b/.github/workflows/deploy_to_render.yml
@@ -323,15 +323,18 @@ jobs:
           ENV_GROUP_ID: ${{ steps.check-existing-env-group.outputs.EXISTING_GROUP_ID }}
         run: |
           KEY="RUNNING_ON_RENDER"
-          VALUE="true"
+          VALUE="True"
+
+          ENCODED_KEY=$(printf '%s' "$KEY" | jq -sRr @uri)
+          VALUE_ESCAPED=$(printf '%s' "$VALUE" | jq -Rs '.')
 
           RESPONSE=$(curl -s -w "%{http_code}" \
             --request PUT \
             --header "Authorization: Bearer $RENDER_API_KEY" \
             --header "Accept: application/json" \
             --header "Content-Type: application/json" \
-            --data "{\"value\":$VALUE}" \
-            --url "https://api.render.com/v1/env-groups/$ENV_GROUP_ID/env-vars/$KEY")
+            --data "{\"value\":$VALUE_ESCAPED}" \
+            --url "https://api.render.com/v1/env-groups/$ENV_GROUP_ID/env-vars/$ENCODED_KEY")
           HTTP_STATUS="${RESPONSE: -3}"
           RESPONSE_BODY="${RESPONSE::-3}"
           if [ "$HTTP_STATUS" -ne 200 ]; then
