--- a/.github/workflows/deploy_to_render.yml
+++ b/.github/workflows/deploy_to_render.yml
@@ -314,7 +314,7 @@ jobs:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
           ENV_GROUP_ID: ${{ steps.check-existing-env-group.outputs.EXISTING_GROUP_ID }}
         run: |
-          KEY="RUNNING_ON_RENDER"
+          KEY="ON_RENDER"
           VALUE="True"
 
           ENCODED_KEY=$(printf '%s' "$KEY" | jq -sRr @uri)
