--- a/setup/nomi.conf
+++ b/setup/nomi.conf
@@ -1,11 +1,17 @@
 # This is your Nomi's configuration file. Lines starting with '#'
 # don't have any configuration importance, they are just to help. Lines
 # that start with CAPITAL_LETTERS= are for you to fill out. Make sure
-# you do not share this file with ANYONE
+# you do not share this file with ANYONE.
 
 # Populate these with your Nomi and Discord API Tokens.
 DISCORD_API_KEY=
 NOMI_API_KEY=
+
+# This information is used to 'install' your Nomi's Discord Bot
+# to a new server. This lets you add them to a server and chat
+# with them there.
+DISCORD_APPLICATION_ID=
+DISCROD_INSTALL_URL=
 
 # You may need to put quotes around your Nomi's name
 # ("like this") if it has spaces in it!
