Create invite URL in setup

--- a/setup/nomi.conf
+++ b/setup/nomi.conf
@@ -7,12 +7,6 @@
 DISCORD_API_KEY=
 NOMI_API_KEY=
 
-# This information is used to 'install' your Nomi's Discord Bot
-# to a new server. This lets you add them to a server and chat
-# with them there.
-DISCORD_APPLICATION_ID=
-DISCROD_INSTALL_URL=
-
 # You may need to put quotes around your Nomi's name
 # ("like this") if it has spaces in it!
 NOMI_NAME=
@@ -29,8 +23,14 @@ NOMI_ID=
 # either side.
 DEFAULT_MESSAGE_PREFIX="*You receive a message from @{author} on Discord* "
 DEFAULT_MESSAGE_SUFFIX="... (the message was cut off because it was too long)"
-CHANNEL_MESSAGE_PREFIX="*You receive a message from {author} in {channel} on {guild} on Discord* "
-DM_MESSAGE_PREFIX="*You receive a DM from {author} on Discord* "
+CHANNEL_MESSAGE_PREFIX="*You receive a message from @{author} in {channel} on {guild} on Discord* "
+DM_MESSAGE_PREFIX="*You receive a DM from @{author} on Discord* "
 
 # If you are a paying user change this to 600
 MAX_MESSAGE_LENGTH=400
+
+# This information is used to invite your Nomi to a new server.
+# The invite URL is how you 'install' the Nomi on to a server
+# and let you chat with them there
+DISCORD_APPLICATION_ID=
+DISCORD_INVITE_URL=
