--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,7 @@ repos:
     - id: end-of-file-fixer
     - id: check-yaml
     - id: check-added-large-files
+      args: ["--maxkb=2500"]
 
   - repo: https://github.com/gitleaks/gitleaks
     rev: v8.21.2
