--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
     rev: v5.0.0
     hooks:
     - id: trailing-whitespace
+      exclude: README.md
     - id: end-of-file-fixer
     - id: check-yaml
     - id: check-added-large-files
