--- a/.github/workflows/increment_minor_version_and_release.yml
+++ b/.github/workflows/increment_minor_version_and_release.yml
@@ -36,19 +36,20 @@ jobs:
           NEW_MINOR=$((MINOR + 1))
           NEW_VERSION="v${MAJOR}.${NEW_MINOR}.0"
 
+          echo "New version will be $NEW_VERSION"
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUTS
 
       # Create a release
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.increment_version.outputs.NEW_VERSION }}
           release_name: "Release ${{ steps.increment_version.outputs.NEW_VERSION }}"
           draft: false
           prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Upload the 'install' file to the release
       - name: Upload 'install' File
