--- a/.github/workflows/increment_minor_version_and_release.yml
+++ b/.github/workflows/increment_minor_version_and_release.yml
@@ -9,18 +9,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout the repository
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      # Verify 'install' File Exists
+      - name: Verify 'install' File Exists
+        run: |
+            if [ ! -f ./install ]; then
+                echo "'install' file not found!"
+                exit 1
+            fi
+
       # Fetch the latest release
       - name: Get Latest Release Tag
         id: get_latest_release
         run: |
-          LATEST_TAG=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            LATEST_TAG=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r .tag_name)
-          if [ "$LATEST_TAG" == "null" ]; then
-            # Default to v1.0.0 if no releases exist
-            LATEST_TAG="v1.0.0"
-          fi
-          echo "Latest tag: $LATEST_TAG"
-          echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_OUTPUT
+            if [ "$LATEST_TAG" == "null" ]; then
+                # Default to v1.0.0 if no releases exist
+                LATEST_TAG="v1.0.0"
+            fi
+            echo "Latest tag: $LATEST_TAG"
+            echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_OUTPUT
 
       # Increment 'minor' version
       - name: Increment Minor
