Add permissions for versioning

--- a/.github/workflows/increment_major_version_and_release.yml
+++ b/.github/workflows/increment_major_version_and_release.yml
@@ -3,6 +3,9 @@ name: Increment Major Version and Create Release
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   increment_major:
     name: Increment Major Version
@@ -40,12 +43,18 @@ jobs:
         run: |
             VERSION=${{ steps.get_latest_release.outputs.LATEST_TAG }}
 
-            # Extract current version
-            MAJOR=$(echo $VERSION | cut -d. -f1 | sed 's/v//')
+            if [[ "$VERSION" == "v1.0.0" ]]; then
+                NEW_VERSION="$VERSION"
+            else
+                # Extract major, minor, and incremental parts
+                MAJOR=$(echo $VERSION | cut -d. -f1 | sed 's/v//')
+                MINOR=$(echo $VERSION | cut -d. -f2)
+                INCREMENTAL=$(echo $VERSION | cut -d. -f3)
 
-            # Increment major part and reset minor and incremental parts
-            NEW_MAJOR=$((major + 1))
-            NEW_VERSION="v${new_major}.0.0"
+                # Increment the major part
+                NEW_MAJOR=$((MAJOR + 1))
+                NEW_VERSION="v${NEW_MAJOR}.0.0"
+            fi
 
             echo "New version will be $NEW_VERSION"
             echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUTS
