--- a/.github/workflows/increment_version_and_release.yml
+++ b/.github/workflows/increment_version_and_release.yml
@@ -64,21 +64,10 @@ jobs:
       # Create a release
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
+          name: "Release ${{ steps.increment_version.outputs.NEW_VERSION }}"
           tag_name: ${{ steps.increment_version.outputs.NEW_VERSION }}
-          release_name: "Release ${{ steps.increment_version.outputs.NEW_VERSION }}"
-          draft: false
-          prerelease: false
-
-      # Upload the 'install' file to the release
-      - name: Upload 'install' File
-        id: upload_installer
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./install
-          asset_name: install
-          asset_content_type: application/octet-stream
+          files: |
+            LICENSE
+            install
