--- a/.github/workflows/increment_minor_version_and_release.yml
+++ b/.github/workflows/increment_minor_version_and_release.yml
@@ -1,4 +1,4 @@
-name: Increment Major Version and Create Release
+name: Increment 'minor' version and Create Release
 
 on:
   workflow_dispatch:
@@ -30,10 +30,7 @@ jobs:
         run: |
             LATEST_TAG=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r .tag_name)
-            if [ "$LATEST_TAG" == "null" ]; then
-                # Default to v1.0.0 if no releases exist
-                LATEST_TAG="v1.0.0"
-            fi
+
             echo "Latest tag: $LATEST_TAG"
             echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_OUTPUT
 
@@ -43,8 +40,8 @@ jobs:
         run: |
             VERSION=${{ steps.get_latest_release.outputs.LATEST_TAG }}
 
-            if [[ "$VERSION" == "v1.0.0" ]]; then
-                NEW_VERSION="$VERSION"
+            if [[ "$VERSION" == "null" ]]; then
+                NEW_VERSION="v1.0.0"
             else
                 # Extract major, minor, and incremental parts
                 MAJOR=$(echo $VERSION | cut -d. -f1 | sed 's/v//')
