--- a/.github/workflows/increment_minor_version_and_release.yml
+++ b/.github/workflows/increment_minor_version_and_release.yml
@@ -61,7 +61,7 @@ jobs:
         id: package_installer
         run: |
             mkdir -p release_assets
-            zip -r release_assets/install.zip install
+            zip -r release_assets/install.zip *
 
       # Create a release
       - name: Create Release
