--- a/.github/workflows/increment_version_and_release.yml
+++ b/.github/workflows/increment_version_and_release.yml
@@ -73,7 +73,7 @@ jobs:
           name: "${{ steps.increment_version.outputs.NEW_VERSION }}"
           tag_name: ${{ steps.increment_version.outputs.NEW_VERSION }}
           make_latest: true
-          body: "Download the latest version"
+          body: "Download the latest version here 🥰"
           files: |
             LICENSE
             install
