--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -76,6 +76,8 @@ jobs:
                 echo "⚠️ WARNING ⚠️ All files will be synchronised to Production"
             fi
 
+            cat "prod/$README"
+
       # Commit and Push Changes to Production Repo
       - name: Commit and Push Changes
         run: |
