--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -73,10 +73,11 @@ jobs:
                 done < "$RELEASE_IGNORE"
             else
                 echo "$RELEASE_IGNORE file not found."
-                echo "⚠️ WARNING ⚠️ All files will be synchronised to Production"
+                echo "⚠️ WARNING ⚠️ All files will be synchronised to the production repository."
             fi
 
             cat "prod/$README"
+            find prod/ -type f
 
       # Commit and Push Changes to Production Repo
       - name: Commit and Push Changes
