Take the training wheels off

--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -89,5 +89,5 @@ jobs:
           git config --global user.email "mya.kirimiya@gmail.com"
           git config --global commit.gpgsign true
           git add .
-          git commit -m "Getting the latest updates from toru173..." --dry-run
-          git push --dry-run
+          git commit -m "Getting the latest updates from toru173..."
+          git push
