--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -46,7 +46,12 @@ jobs:
       # Here we basically nuke everything in prod except .git, and
       # replace it with the contents of dev
       - name: Clean Production Repository
-        run: rsync -ah --delete --exclude='.git' . prod/
+        run: |
+
+            # Delete everything in prod that isn't prod's .git folder
+            find prod -mindepth 1 ! -name '.git' -exec rm -rf {} +
+            # Copy over everything from dev that isn't dev's .git folder
+            rsync -ah --exclude='.git' . prod/
 
       # Prepare the Production Repository for Release
       - name: Prepare for Release
