--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -50,6 +50,7 @@ jobs:
 
             # Delete everything in prod that isn't prod's .git folder
             find prod/ -mindepth 1 ! -name '.git' -exec rm -rf {} +
+            find prod/
             # Copy over everything from dev that isn't dev's .git folder
             rsync -ah --exclude='.git' ./ prod/
 
