--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -49,8 +49,7 @@ jobs:
         run: |
 
             # Delete everything in prod that isn't prod's .git folder
-            find prod/ -mindepth 1 ! -name '.git' -exec rm -rf {} +
-            find prod/
+            find prod/ -mindepth 1 ! 'prod/.git*' -exec rm -rf {} +
             # Copy over everything from dev that isn't dev's .git folder
             rsync -ah --exclude='.git' ./ prod/
 
@@ -85,7 +84,7 @@ jobs:
       # Sanity Check
       - name: Sanity Check
         run: |
-            cat README.md
+            cat prod/README.md
             find prod/
             exit 1
 
