--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -41,7 +41,7 @@ jobs:
       # Clone the Production Repository
       - name: Clone Production Repository
         run: |
-            git clone git@github.com:myakirimiya/nomi-discord-python.git prod/
+            git clone git@github.com:myakirimiya/nomi-discord-python.git prod
 
       # Copy the Development repository to the Production repository.
       # Here we basically nuke everything in prod except .git, and
@@ -50,9 +50,9 @@ jobs:
         run: |
 
             # Delete everything in prod that isn't prod's .git folder
-            find prod/ -mindepth 1 ! -path 'prod/.git/*' -exec rm -rf {} +
+            find prod -mindepth 1 ! -path 'prod/.git/*' -exec rm -rf {} +
             # Copy over everything from dev that isn't dev's .git folder
-            rsync -ah --exclude='.git' ./ prod/
+            rsync -ah --exclude='.git' . prod
 
       # Prepare the Production Repository for Release
       - name: Prepare for Release
