--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -40,19 +40,13 @@ jobs:
 
       # Clone the Production Repository
       - name: Clone Production Repository
-        run: |
-            git clone git@github.com:myakirimiya/nomi-discord-python.git prod
+        run: git clone git@github.com:myakirimiya/nomi-discord-python.git prod
 
       # Copy the Development repository to the Production repository.
       # Here we basically nuke everything in prod except .git, and
       # replace it with the contents of dev
       - name: Clean Production Repository
-        run: |
-
-            # Delete everything in prod that isn't prod's .git folder
-            find prod -mindepth 1 ! -path 'prod/.git/*' -exec rm -rf {} +
-            # Copy over everything from dev that isn't dev's .git folder
-            rsync -ah --exclude='.git' . prod
+        run: rsync -avh --delete-before --ignore-error --exclude='.git' . prod/
 
       # Prepare the Production Repository for Release
       - name: Prepare for Release
