--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -46,7 +46,7 @@ jobs:
       # Here we basically nuke everything in prod except .git, and
       # replace it with the contents of dev
       - name: Clean Production Repository
-        run: rsync -avh --delete-before --ignore-error --exclude='.git' . prod/
+        run: rsync -avh --delete-before --ignore-errors --exclude='.git' . prod/
 
       # Prepare the Production Repository for Release
       - name: Prepare for Release
