--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -50,7 +50,6 @@ jobs:
 
             find prod/ -mindepth 1 -not -path "prod/.git" -not -path "prod/.git/*" -exec rm -rf {} +
             # find prod/ -mindepth 1 ! -path 'prod/.git/*' -exec sh -c 'echo "Removing: $1" && rm -rf "$1"' _ {} \;
-            find prod/ -mindepth 1
             rsync -ah --exclude='.git' --exclude='prod' ./ prod/
 
       # Prepare the Production Repository for Release
@@ -81,8 +80,6 @@ jobs:
                 echo "⚠️ WARNING ⚠️ All files will be pushed to Production"
             fi
 
-            find prod/ -mindepth 1
-
       # Commit and Push Changes to Production Repo
       - name: Commit and Push Changes
         run: |
@@ -93,5 +90,5 @@ jobs:
           git config --global user.email "mya.kirimiya@gmail.com"
           git config --global commit.gpgsign true
           git add .
-          git commit -m "Getting the latest updates from toru173..." --dry-run
-          git push --dry-run
+          git commit -m "Getting the latest updates from toru173..."
+          git push
